# saffi

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: devskim.yml  labtest.yml  osv-scanner.yml
cshim/: Cargo.toml  build.rs  rust-toolchain.toml
cshim/.cargo/: config.toml
cshim/src/: lib.rs
ffi/: Cargo.toml  sart.rs  waker.rs
ffi/src/: lib.rs
ffi/src/arc/: mod.rs
ffi/src/boxed/: mod.rs  spawn.rs
ffi/src/futures/: atomiccw.rs  im.rs  implements.rs  mod.rs
ffi/src/string/: str.rs
ffi/src/structures/: mod.rs
ffi/src/tests/: atomicffiwaker.rs  mod.rs
ffi/src/vector/: mod.rs
libsalloc/: Cargo.toml  build.rs  rust-toolchain.toml
libsalloc/allocator/: Cargo.toml
libsalloc/allocator/src/: lib.rs
libsalloc/linux/: nfpm.yaml
libsalloc/src/: lib.rs
libsalloc/windows/: Package.wxs
libsavmasync/: Cargo.toml
libsavmasync/src/: lib.rs  space.rs
members/benchmarks/: Cargo.toml  build.rs
members/benchmarks/asyncs/: Cargo.toml  build.rs
members/benchmarks/asyncs/src/: lib.rs
members/benchmarks/benches/: ffi.rs  ffi_multi.rs  ffi_single.rs  smol.rs  tokio.rs  tokio_multi.rs  tokio_single.rs
members/benchmarks/src/: lib.rs
members/loomtests/: Cargo.toml  out.txt
members/loomtests/src/: main.rs
members/loomtests/src/arcstore/: im.rs  mod.rs
members/loomtests/src/waker/: mod.rs
salloc/: Cargo.toml  build.rs
salloc/src/: lib.rs
savmasync/: Cargo.toml
savmasync/src/: lib.rs
