[package]
name = "benchmarks"
version = "0.0.0"
edition = "2024"

[[bench]]
name = "tokio_multi"
harness = false

[[bench]]
name = "ffi_multi"
harness = false

[[bench]]
name = "tokio_single"
harness = false

[[bench]]
name = "ffi_single"
harness = false

[dependencies]
divan = "^0.1"
futures = "0.3.32"
saffi = { path = "../../ffi" }
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "time"] }
